# projectx

./: .coveragerc  .dockerignore  .gitattributes  .gitignore  .pylintrc  LICENSE  Makefile  Pipfile  README.md  devspace.yaml  docker-compose.yml  pyproject.toml  pytest.ini  setup.cfg
.github/workflows/: ci.yml  linter.yml
backend/: .coveragerc  Dockerfile  backend-nginx.conf  circus.ini  manage.py  nginx.conf  pytest.ini  requirements.in  start.sh  test_helpers.py  uwsgi.ini
backend/app/: manage.py
backend/app/api/: fastapi.py  models.py  routing.py  utils.py  wsgi.py
backend/app/common/: fields.py  models.py  validation.py
backend/app/common/management/commands/: wait_for_db.py
backend/app/projectx/: apps.py  asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
backend/app/users/: admin.py  api.py  app.py  apps.py  consumers.py  decorators.py  emails.py  fields.py  models.py  urls.py  validation.py
backend/app/users/migrations/: 0001_initial.py  0002_auto_20201015_1431.py  0003_auto_20210425_1311.py  0005_alter_user_id.py
backend/config/: backend-nginx.conf  circus.ini  general-security-headers.conf  start.sh  uwsgi.ini
backend/projectx/: apps.py  asgi.py  consumers.py  routing.py  settings.py  urls.py  wsgi.py
backend/projectx/api/: asgi.py  fastapi.py
backend/projectx/common/: fields.py  models.py  validation.py
backend/projectx/users/: admin.py  api.py  apps.py  decorators.py  emails.py  models.py  urls.py  validation.py
backend/projectx/users/migrations/: 0001_initial.py  0002_auto_20201015_1431.py  0003_auto_20210425_1311.py  0004_apikey.py  0005_alter_user_id.py  0006_user_anonymous.py
backend/requirements/: requirements.in  requirements.txt  test.in  test.txt
backend/templates/: base.html  index.html
backend/test_apps/test_app1/: app.py  models.py
backend/testing_apps/test_app/: app.py  models.py
backend/testing_apps/test_app_with_api_key/: app.py  models.py
backend/testing_apps/test_app_with_jwt_user/: app.py  models.py
backend/testing_apps/test_app_with_no_auth/: app.py  models.py
backend/testing_apps/test_app_with_owner/: app.py  models.py
backend/testing_apps/test_app_with_related_model/: app.py  models.py
backend/tests/: conftest.py  test_settings.py
backend/tests/api/: test_api.py  test_fastapi.py
backend/tests/common/: test_validation.py
backend/tests/projectx/: test_apps.py  test_asgi.py  test_consumers.py
backend/tests/test_all_apps/: test_api_key.py  test_jwt_user.py  test_model_with_owner.py  test_related_model.py  test_related_model_m2m.py  test_unauthenticated_model.py
backend/tests/test_app/: app.py  models.py  test_testapp.py
backend/tests/test_app1/: test_basic_model_api.py  test_related_model_api.py
backend/tests/test_fastapi_routes/: conftest.py  test_api_key.py  test_automatic_fields.py  test_jwt_user.py  test_model_with_array.py  test_model_with_choices.py  test_model_with_default.py  test_model_with_filter.py  test_model_with_id.py  test_model_with_json_fields.py  test_model_with_owner.py  test_model_with_validation.py  test_patch_model.py  test_related_model.py  test_related_model_m2m.py  test_unauthenticated_model.py
backend/tests/test_projectx/: test_asgi.py
backend/tests/users/: test_admin.py  test_api.py  test_app.py  test_apps.py  test_consumers.py  test_fields.py  test_models.py  test_validation.py  test_views.py
backend/users/: consumers.py  forms.py  models.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py
backend/users/templates/users/: user_detail.html  user_form.html  user_list.html
desktop/: .gitignore  package.json
desktop/public/: electron.js
frontend/: .bic_cache  .env  .env.development  .env.production  .eslintrc.js  .gitignore  Dockerfile  package-lock.json  package.json  vite.config.js
frontend/public/: electron.js  index.html  manifest.json
frontend/src/: App.css  App.js  App.jsx  App.test.js  index.css  index.js  main.jsx  project.css  requests.js  serviceWorker.js  setupProxy.js  theme_1618955931948.css  urls.js  websocket.js
frontend/src/api/: requests.js  urls.js
frontend/src/containers/: CentralContainer.js  CentralContainer.jsx
frontend/src/pages/: Activate.js  Activate.jsx  Authed.jsx  ChangeDetails.js  ChangeDetails.jsx  ChangePassword.js  ChangePassword.jsx  Dashboard.css  Dashboard.js  Example.js  Example.jsx  ForgotPassword.js  ForgotPassword.jsx  Loading.js  Login.css  Login.js  Login.jsx  Main.js  NotFound.js  PasswordReset.js  Register.js  Register.jsx  Settings.js  Settings.jsx  SideBar.js  SideBar.jsx  TopNav.js  TopNav.jsx  UnAuthed.jsx
frontend/src/project/: Dashboard.js  Loading.js  config.js
frontend/src/store/: actions.js  reducer.js  state.js
script/: build.ps1  build.sh  checks.bat  checks.ps1  fix_lint.bat  fix_lint.ps1  fix_lint.sh  line_endings.ps1  lint.bat  lint.ps1  lint.sh  pre-commit-windows.example  requirements.bat
tests/: constants.js  functions.js  globals.js  nightwatch.conf.js  package.json
tests/specs/: login.js
(+4 files in other folders)
