[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
src_paths = ["backend/", "backend/tests"]

[tool.poetry]
name = "projectx"
version = "0.1.0"
description = "Projectx"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^4.0.4"
django-environ = "^0.8"
django-su = "^1.0"
Twisted = {extras = ["http2", "tls"], version = "^22.1"}
uWSGI = {version = "~=2.0", platform = "linux"}
djantic = "^0.7"
fastapi = "^0.75"
python-jose = "^3.3"
psycopg2-binary = "^2.9"
django-model-utils = "^4.1"
channels = "^3.0"
asgiref = "^3.5"
channels-redis = "^3.3"
django-redis = "^5.0"
python-multipart = "^0.0"
marshmallow = "^3.13"
django-ratelimit = "^3.0"
pydantic = "^1.8"
async-timeout = "^3.0"
uvicorn = {version = "^0.17", extras = ["standard"]}
"backports.zoneinfo" = "^0.2.1"

[tool.poetry.dev-dependencies]
pytest = "^7.1"
wheel = "^0.36"
pytest-django = "^4.5"
pytest-cov = "^3.0"
pytest-env = "^0.6"
pytest-mock = "^3.6"
black = "^22.3"
unify = "^0.5"
pylint = "^2.9"
pylint-django = "^2.4"
requests = "^2.26"
isort = "^5.9"
safety = "^1.10.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
