[tool.poetry]
name = "projectx"
version = "0.1.0"
description = "Projectx"
authors = []
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
Django = "^4.1"
django-environ = "^0.10"
django-su = "^1.0"
django-ratelimit = "^4.0"
django-redis = "^5.0"
django-model-utils = "^4.1"
channels = "^4.0"
channels-redis = "^4.0"
async-timeout = "^4.0"
djantic = "^0.7"
fastapi = "^0.93"
httpx = "^0.23.3"
python-jose = "^3.3"
asgiref = "^3.5"
Twisted = {extras = ["http2", "tls"], version = "^22.10"}
uWSGI = {version = "~=2.0", platform = "linux"}
psycopg2-binary = "^2.9"
python-multipart = "^0.0"
marshmallow = "^3.13"
pydantic = "^1.8"
uvicorn = {version = "^0.20", extras = ["standard"]}

[tool.poetry.dev-dependencies]
pytest = "^7.2"
wheel = "^0.38"
pytest-django = "^4.4"
pytest-cov = "^4.0"
pytest-env = "^0.8"
pytest-mock = "^3.6"
black = "^23.1"
unify = "^0.5"
pylint = "^2.9"
pylint-django = "^2.4"
requests = "^2.26"
isort = "^5.9"

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
src_paths = ["backend/", "backend/tests"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
